# ml_audit

./: AuditTrials.ipynb  LICENSE  MANIFEST.in  README.md  audit_trial.py  audit_trials.py  demo_usage.py  info.md  json_to_html_watcher.py  pyproject.toml  setup.py
audit_trails/: audit_A.json  audit_B.json  audit_C.json  audit_trial.json  comprehensive_audit.json
ml_audit/: __init__.py  operations.py  recorder.py  utils.py  visualizer.py
tests/: test_ml_audit.py
visualizations/: audit_A.html  audit_B.html  audit_C.html  audit_trial.html  comprehensive_audit.html
